test/errors/type/collections/set/tostr.yasl
echo mt.lookup(collections.set(), .tostr)(1)
